kube/provider-v2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: provider-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: provider
        version: v2
    spec:
      containers:
      - name: provider
        image: provider:2.0
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
        ports:
        - containerPort: 5000
