kube/consumer.yaml
apiVersion: v1
kind: Service
metadata:
  name: consumer-svc
  labels:
    app: consumer
spec:
  ports:
  - port: 6000
    targetPort: 6000
    protocol: TCP
    name: http
  selector:
    app: consumer
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: consumer-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: consumer
        version: v1
    spec:
      containers:
      - name: consumer
        image: consumer:1.0
        env : 
        - name: PROVIDER_PORT
          value: "5000"             
        - name: CONSUMER_PORT
          value: "6000"
        - name: PROVIDER_HOST
          value: provider-svc      
        - name: BW_PROFILE
          value: Docker                   
        imagePullPolicy: IfNotPresent        
        resources:
          requests:
            cpu: 100m
        ports:
        - containerPort: 6000
