kube/provider.yaml
apiVersion: v1
kind: Service
metadata:
  name: provider-svc
  labels:
    app: provider
spec:
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: provider
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: provider-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: provider
        version: v1
    spec:
      containers:
      - name: provider
        image: provider:1.0
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
        ports:
        - containerPort: 5000
