kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: consumer-ing
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /.*
        backend:
          serviceName: consumer-svc
          servicePort: 6000
